--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -24,6 +24,9 @@ div class="login_form"
     .group
       = form.label :age
       = form.number_field :age
+    .group
+      = form.label :avatar
+      = form.file_field :avatar
     / .field
     /   = form.label :admin do
     /     = form.check_box :admin
