--- a/app/views/whiskies/index.html.slim
+++ b/app/views/whiskies/index.html.slim
@@ -1,12 +1,15 @@
-h1.main_title マイWhisky
+div.container_inner.min_height_non_header
+  div.user
+    p.user_avater = image_tag current_user.avatar if current_user.avatar.attached?
+    div
+      p.user_name = link_to current_user.name, edit_user_path(current_user)
+      p.user_id 
+        | ＠
+        = current_user.id
 
-- @whiskyies.each do |whisky|
-  div.whisky_lists
-    div.whisky_list
-      p = link_to whisky.name, whisky_path(whisky)
-      p = whisky.description
+  div.whisky_lists.scroll_190
+    - @whiskyies.each do |whisky|
+      div.whisky_list
+        p = link_to whisky.name, whisky_path(whisky)
+        p = image_tag whisky.image if whisky.image.attached?
 
-
-
-
-p.whisky_create_btn = link_to '新しいWhiskyを登録', new_whisky_path
