--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,3 +1,3 @@
 h1.main_title  新規登録ページ
-= render 'form', user: @user
+= render partial: 'form', locals: { user: @user }
 = link_to 'Back', users_path
