--- a/app/views/whiskies/edit.html.slim
+++ b/app/views/whiskies/edit.html.slim
@@ -1,5 +1,4 @@
-h1= @whisky.name 
-の情報を編集
+div.container_inner.min_height_non_header
+  = link_to '< Mypage', whiskies_path, class: "back"
 
-= render 'form', whisky: @whisky
-= link_to 'Back', whiskies_path
+  = render 'form', whisky: @whisky
