--- a/app/views/whiskies/show.html.slim
+++ b/app/views/whiskies/show.html.slim
@@ -1,6 +1,9 @@
-h1 whiskyの詳細
-
-p= @whisky.name
-p= @whisky.description
-= link_to '一覧に戻る', whiskies_path
-= link_to '編集', edit_whisky_path
+div.container_inner.min_height_non_header
+  = link_to '< Mypage', whiskies_path, class: "back"
+  div.scroll_120
+    p= @whisky.name
+    div.whisky_detail
+      div.whisky_detail_name
+        p= image_tag @whisky.image if @whisky.image.attached?
+      div.whisky_detail_description = auto_link(simple_format(h(@whisky.description), {}, sanitize: false))
+    = link_to '編集', edit_whisky_path
